--- a/_includes/gallery_1.html
+++ b/_includes/gallery_1.html
@@ -1,29 +1,30 @@
 <figure class="effect-portfolio wow fadeIn" data-wow-duration="1s">
-  <img src="/img/albums/album_1/DSC01639.JPG" alt="De l'eau"/>
+  <img src="/img/albums/album_1/DSC01639.JPG" alt="bananas"/>
   <figcaption>
     <h2>De l'eau</h2>
-    <a title="(2/23) Lake Tahoe - USA" href="/img/albums/album_1/DSC00899.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC00899.JPG"></a>
-    <a title="(3/23) Lac Léman - Suisse" href="/img/albums/album_1/DSC04671.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC04671.jpg"></a>
-    <a title="(4/23) San Francisco - USA" href="/img/albums/album_1/IMG_0127.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/IMG_0127.JPG"></a>
-    <a title="(5/23) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060390.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060390.JPG"></a>
-    <a title="(6/23) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060508.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060508.JPG"></a>
-    <a title="(7/23) Madrid - Espagne" href="/img/albums/album_1/P1070217.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1070217.JPG"></a>
-    <a title="(8/23) Lac Léman - Suisse" href="/img/albums/album_1/Photo0101.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/Photo0101.jpg"></a>
-    <a title="(9/23) Rivière Allondon - Suisse" href="/img/albums/album_1/DSC01635.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC01635.JPG"></a>
-    <a title="(10/23) Lac Léman - Suisse" href="/img/albums/album_1/DSC04672.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC04672.jpg"></a>
-    <a title="(11/23) Mer des Caraïbes - Mexique" href="/img/albums/album_1/IMG_0198.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/IMG_0198.JPG"></a>
-    <a title="(12/23) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060393.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060393.JPG"></a>
-    <a title="(13/23) ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060672.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060672.JPG"></a>
-    <a title="(14/23) Lake Tahoe - USA" href="/img/albums/album_1/P1070301.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1070301.JPG"></a>
-    <a title="(15/23) Le Nil - Egypte" href="/img/albums/album_1/P10403850.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403850.jpg"></a>
-    <a title="(16/23) Rivière Allondon - Suisse" href="/img/albums/album_1/DSC01639.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC01639.JPG"></a>
-    <a title="(17/23) Lac Léman - Suisse" href="/img/albums/album_1/DSC04678.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC04678.jpg"></a>
-    <a title="(18/23) Rivière Allondon - Suisse" href="/img/albums/album_1/P1040385.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1040385.JPG"></a>
-    <a title="(19/23) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060395.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060395.JPG"></a>
-    <a title="(20/23) San Francisco - USA" href="/img/albums/album_1/P1060998.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060998.JPG"></a>
-    <a title="(21/23) Lac Léman - Suisse" href="/img/albums/album_1/P10403851.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403851.jpg"></a>
-    <a title="(22/23) Mer Egée - Grèce" href="/img/albums/album_1/P10403852.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403852.jpg"></a>
-    <a title="(23/23) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090446.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090446.jpg"></a>
-    <a title="(1/23) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090447.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090447.jpg"></a>
+    <a title="(2/24) Lake Tahoe - USA" href="/img/albums/album_1/DSC00899.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC00899.JPG"></a>
+    <a title="(3/24) Lac Léman - Suisse" href="/img/albums/album_1/DSC04671.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC04671.jpg"></a>
+    <a title="(4/24) San Francisco - USA" href="/img/albums/album_1/IMG_0127.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/IMG_0127.JPG"></a>
+    <a title="(5/24) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060390.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060390.JPG"></a>
+    <a title="(6/24) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060508.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060508.JPG"></a>
+    <a title="(7/24) Madrid - Espagne" href="/img/albums/album_1/P1070217.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1070217.JPG"></a>
+    <a title="(8/24) Lac Léman - Suisse" href="/img/albums/album_1/Photo0101.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/Photo0101.jpg"></a>
+    <a title="(9/24) Rivière Allondon - Suisse" href="/img/albums/album_1/DSC01635.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC01635.JPG"></a>
+    <a title="(10/24) Lac Léman - Suisse" href="/img/albums/album_1/DSC04672.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC04672.jpg"></a>
+    <a title="(11/24) Mer des Caraïbes - Mexique" href="/img/albums/album_1/IMG_0198.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/IMG_0198.JPG"></a>
+    <a title="(12/24) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060393.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060393.JPG"></a>
+    <a title="(13/24) ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060672.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060672.JPG"></a>
+    <a title="(14/24) Lake Tahoe - USA" href="/img/albums/album_1/P1070301.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1070301.JPG"></a>
+    <a title="(15/24) Le Nil - Egypte" href="/img/albums/album_1/P10403850.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403850.jpg"></a>
+    <a title="(16/24) Rivière Allondon - Suisse" href="/img/albums/album_1/DSC01639.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC01639.JPG"></a>
+    <a title="(17/24) Lac Léman - Suisse" href="/img/albums/album_1/DSC04678.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/DSC04678.jpg"></a>
+    <a title="(18/24) Rivière Allondon - Suisse" href="/img/albums/album_1/P1040385.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1040385.JPG"></a>
+    <a title="(19/24) Ile de Fihalhohi - Maldives" href="/img/albums/album_1/P1060395.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060395.JPG"></a>
+    <a title="(20/24) San Francisco - USA" href="/img/albums/album_1/P1060998.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060998.JPG"></a>
+    <a title="(21/24) Lac Léman - Suisse" href="/img/albums/album_1/P10403851.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403851.jpg"></a>
+    <a title="(22/24) Mer Egée - Grèce" href="/img/albums/album_1/P10403852.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403852.jpg"></a>
+    <a title="(23/24) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090446.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090446.jpg"></a>
+    <a title="(24/24) Bruxelles - Belgique" href="/img/albums/album_1/P1070766.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1070766.jpg"></a>
+    <a title="(1/24) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090447.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090447.jpg"></a>
   </figcaption>
 </figure>
