--- a/_includes/gallery_2.html
+++ b/_includes/gallery_2.html
@@ -2,16 +2,24 @@
   <img src="/img/albums/album_2/P1040563.JPG" alt="Des hommes"/>
   <figcaption>
     <h2>Des Hommes</h2>
-    <a title="(2/11) Village de Xidi - Chine" href="/img/albums/album_2/P1040563.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040563.JPG"></a>
-    <a title="(3/11) Shanghai - Chine" href="/img/albums/album_2/P1040815.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040815.JPG"></a>
-    <a title="(4/11) Village de Gordes - France" href="/img/albums/album_2/P1070628.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070628.jpg"></a>
-    <a title="(5/11) Berlin - Allemagne" href="/img/albums/album_2/P1070891.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070891.jpg"></a>
-    <a title="(6/11) Village de Xidi - Chine" href="/img/albums/album_2/P1040561.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040561.JPG"></a>
-    <a title="(7/11) Village de Xidi - Chine" href="/img/albums/album_2/P1040583.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040583.JPG"></a>
-    <a title="(8/11) San Francisco - USA" href="/img/albums/album_2/P1070009.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070009.JPG"></a>
-    <a title="(9/11) Berlin - Allemagne" href="/img/albums/album_2/P1070889.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070889.jpg"></a>
-    <a title="(10/11) Ile de Naxos - Grèce" href="/img/albums/album_2/P10708890.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P10708890.jpg"></a>
-    <a title="(11/11) Hôtel Bellagio Las Vegas - USA" href="/img/albums/album_2/P1070143.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070143.jpg"></a>
-    <a title="(1/11) San Francisco - USA" href="/img/albums/album_2/DSC00286-Version2.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/DSC00286-Version2.JPG"></a>
+    <a title="(2/19) Village de Xidi - Chine" href="/img/albums/album_2/P1040563.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040563.JPG"></a>
+    <a title="(3/19) Shanghai - Chine" href="/img/albums/album_2/P1040815.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040815.JPG"></a>
+    <a title="(4/19) Village de Gordes - France" href="/img/albums/album_2/P1070628.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070628.jpg"></a>
+    <a title="(5/19) Berlin - Allemagne" href="/img/albums/album_2/P1070891.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070891.jpg"></a>
+    <a title="(6/19) Village de Xidi - Chine" href="/img/albums/album_2/P1040561.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040561.JPG"></a>
+    <a title="(7/19) Village de Xidi - Chine" href="/img/albums/album_2/P1040583.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040583.JPG"></a>
+    <a title="(8/19) San Francisco - USA" href="/img/albums/album_2/P1070009.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070009.JPG"></a>
+    <a title="(9/19) Berlin - Allemagne" href="/img/albums/album_2/P1070889.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070889.jpg"></a>
+    <a title="(10/19) Ile de Naxos - Grèce" href="/img/albums/album_2/P10708890.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P10708890.jpg"></a>
+    <a title="(11/19) Hôtel Bellagio Las Vegas - USA" href="/img/albums/album_2/P1070143.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1070143.jpg"></a>
+    <a title="(12/19) New York - USA" href="/img/albums/album_2/DSC00170.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/DSC00170.jpg"></a>
+    <a title="(13/19) San Francisco - USA" href="/img/albums/album_2/IMG_0153.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/IMG_0153.jpg"></a>
+    <a title="(14/19) Village de Xidi - Chine" href="/img/albums/album_2/P1040576.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040576.jpg"></a>
+    <a title="(15/19) Village de Xidi - Chine" href="/img/albums/album_2/P1040577.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040577.jpg"></a>
+    <a title="(16/19) Tangkou - Chine" href="/img/albums/album_2/P1040695.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040695.jpg"></a>
+    <a title="(17/19) Shanghai - Chine" href="/img/albums/album_2/P1040892.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040892.jpg"></a>
+    <a title="(18/19) Pékin - Chine" href="/img/albums/album_2/P1040898.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040898.jpg"></a>
+    <a title="(19/19) Le Caire - Egypte" href="/img/albums/album_2/P1050548.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1050548.jpg"></a>
+    <a title="(1/19) San Francisco - USA" href="/img/albums/album_2/DSC00286-Version2.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/DSC00286-Version2.JPG"></a>
   </figcaption> <!-- End caption -->
 </figure> <!-- End portfolio 2 -->
