--- a/_includes/gallery_3.html
+++ b/_includes/gallery_3.html
@@ -2,32 +2,33 @@
   <img src="img/albums/album_3/P1040556.JPG" alt="De la nature"/>
   <figcaption>
     <h2>De la nature</h2>
-    <a title="(2/27) Mon jardin" href="/img/albums/album_3/DSC01190.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01190.JPG"></a>
-    <a title="(3/27) Minerve - France" href="/img/albums/album_3/DSC01533.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01533.JPG"></a>
-    <a title="(4/27) Mon jardin" href="/img/albums/album_3/P1020344.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1020344.jpg"></a>
-    <a title="(5/27) Sur la route" href="/img/albums/album_3/P1040369.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040369.JPG"></a>
-    <a title="(6/27) Shanghai - Chine" href="/img/albums/album_3/P1040582.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040582.JPG"></a>
-    <a title="(7/27) Shanghai - Chine" href="/img/albums/album_3/P1040764.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040764.JPG"></a>
-    <a title="(8/27) Village de Saint-Emilion - France" href="/img/albums/album_3/P1050605.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1050605.JPG"></a>
-    <a title="(9/27) Village de Flavigny - France" href="/img/albums/album_3/P1050609.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1050609.JPG"></a>
-    <a title="(10/27) Ile de Cies - Espagne" href="/img/albums/album_3/P1060103.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060103.JPG"></a>
-    <a title="(11/27) Ile de Tenerife - Espagne" href="/img/albums/album_3/P1080528.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1080528.JPG"></a>
-    <a title="(12/27) Genève - Suisse" href="/img/albums/album_3/P10808331.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808331.jpg"></a>
-    <a title="(13/27) Sur la route" href="/img/albums/album_3/P10808333.png" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808333.png"></a>
-    <a title="(14/27) San Francisco - USA" href="/img/albums/album_3/DSC00705.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00705.JPG"></a>
-    <a title="(15/27) Mon jardin" href="/img/albums/album_3/DSC01315.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01315.JPG"></a>
-    <a title="(16/27)" href="/img/albums/album_3/IMG_0166.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/IMG_0166.JPG"></a>
-    <a title="(17/27)" href="/img/albums/album_3/P1040209.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040209.JPG"></a>
-    <a title="(18/27)" href="/img/albums/album_3/P1040556.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040556.JPG"></a>
-    <a title="(19/27) Montagnes Huangshan - Chine" href="/img/albums/album_3/P1040599.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040599.JPG"></a>
-    <a title="(20/27)" href="/img/albums/album_3/P1040918.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040918.JPG"></a>
-    <a title="(21/27)" href="/img/albums/album_3/P1050608.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1050608.JPG"></a>
-    <a title="(22/27) Ile de Cies - Espagne" href="/img/albums/album_3/P1060057.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060057.JPG"></a>
-    <a title="(23/27)" href="/img/albums/album_3/P1060245.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060245.JPG"></a>
-    <a title="(24/27)" href="/img/albums/album_3/P10808330.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808330.jpg"></a>
-    <a title="(25/27)" href="/img/albums/album_3/P10808332.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808332.jpg"></a>
-    <a title="(26/27) New York - USA" href="/img/albums/album_3/DSC00128.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00128.jpg"></a>
-    <a title="(27/27) Mon jardin" href="/img/albums/album_3/P10808333.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808333.jpg"></a>
-    <a title="(1/27) San Francisco - USA" href="/img/albums/album_3/DSC00700.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00700.JPG"></a>
+    <a title="(2/28) Dans mon jardin" href="/img/albums/album_3/DSC01190.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01190.JPG"></a>
+    <a title="(3/28) Minerve - France" href="/img/albums/album_3/DSC01533.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01533.JPG"></a>
+    <a title="(4/28) Dans mon jardin" href="/img/albums/album_3/P1020344.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1020344.jpg"></a>
+    <a title="(5/28) Sur la route" href="/img/albums/album_3/P1040369.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040369.JPG"></a>
+    <a title="(6/28) Shanghai - Chine" href="/img/albums/album_3/P1040582.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040582.JPG"></a>
+    <a title="(7/28) Shanghai - Chine" href="/img/albums/album_3/P1040764.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040764.JPG"></a>
+    <a title="(8/28) Village de Saint-Emilion - France" href="/img/albums/album_3/P1050605.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1050605.JPG"></a>
+    <a title="(9/28) Village de Flavigny - France" href="/img/albums/album_3/P1050609.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1050609.JPG"></a>
+    <a title="(10/28) Ile de Cies - Espagne" href="/img/albums/album_3/P1060103.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060103.JPG"></a>
+    <a title="(11/28) Ile de Tenerife - Espagne" href="/img/albums/album_3/P1080528.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1080528.JPG"></a>
+    <a title="(12/28) Genève - Suisse" href="/img/albums/album_3/P10808331.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808331.jpg"></a>
+    <a title="(13/28) Sur la route" href="/img/albums/album_3/P10808333.png" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808333.png"></a>
+    <a title="(14/28) San Francisco - USA" href="/img/albums/album_3/DSC00705.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00705.JPG"></a>
+    <a title="(15/28) Dans mon jardin" href="/img/albums/album_3/DSC01315.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01315.JPG"></a>
+    <a title="(16/28)" href="/img/albums/album_3/IMG_0166.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/IMG_0166.JPG"></a>
+    <a title="(17/28)" href="/img/albums/album_3/P1040209.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040209.JPG"></a>
+    <a title="(18/28)" href="/img/albums/album_3/P1040556.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040556.JPG"></a>
+    <a title="(19/28) Montagnes Huangshan - Chine" href="/img/albums/album_3/P1040599.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040599.JPG"></a>
+    <a title="(20/28)" href="/img/albums/album_3/P1040918.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1040918.JPG"></a>
+    <a title="(21/28)" href="/img/albums/album_3/P1050608.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1050608.JPG"></a>
+    <a title="(22/28) Ile de Cies - Espagne" href="/img/albums/album_3/P1060057.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060057.JPG"></a>
+    <a title="(23/28)" href="/img/albums/album_3/P1060245.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060245.JPG"></a>
+    <a title="(24/28)" href="/img/albums/album_3/P10808330.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808330.jpg"></a>
+    <a title="(25/28)" href="/img/albums/album_3/P10808332.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808332.jpg"></a>
+    <a title="(26/28) New York - USA" href="/img/albums/album_3/DSC00128.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00128.jpg"></a>
+    <a title="(27/28) Dans mon jardin" href="/img/albums/album_3/P10808333.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808333.jpg"></a>
+    <a title="(28/28) San Francisco - USA" href="/img/albums/album_3/DSC00271.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00271.jpg"></a>
+    <a title="(1/28) San Francisco - USA" href="/img/albums/album_3/DSC00700.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00700.JPG"></a>
   </figcaption>
 </figure>
