extension case, y know.

--- a/_includes/gallery_1.html
+++ b/_includes/gallery_1.html
@@ -23,8 +23,8 @@
     <a title="(20/24) San Francisco - USA" href="/img/albums/album_1/P1060998.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1060998.JPG"></a>
     <a title="(21/24) Lac Léman - Suisse" href="/img/albums/album_1/P10403851.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403851.jpg"></a>
     <a title="(22/24) Mer Egée - Grèce" href="/img/albums/album_1/P10403852.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P10403852.jpg"></a>
-    <a title="(23/24) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090446.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090446.jpg"></a>
+    <a title="(23/24) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090446.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090446.jpg"></a>
     <a title="(24/24) Bruxelles - Belgique" href="/img/albums/album_1/P1070766.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1070766.jpg"></a>
-    <a title="(1/24) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090447.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090447.jpg"></a>
+    <a title="(1/24) Temple de Tulum - Mexique" href="/img/albums/album_1/P1090447.JPG" data-lightbox-gallery="gallery1" data-lightbox-hidpi="/img/albums/album_1/P1090447.jpg"></a>
   </figcaption>
 </figure>
