--- a/_includes/gallery_2.html
+++ b/_includes/gallery_2.html
@@ -1,5 +1,5 @@
 <figure class="effect-portfolio wow fadeIn" data-wow-duration="2s">
-  <img src="/img/albums/album_2/P1040563.JPG" alt="Des hommes"/>
+  <img src="/img/albums/album_2/thumbnail.jpg" alt="Des hommes"/>
   <figcaption>
     <h2>Des Hommes</h2>
     <a title="(2/19) Village de Xidi - Chine" href="/img/albums/album_2/P1040563.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040563.JPG"></a>
