--- a/_includes/gallery_3.html
+++ b/_includes/gallery_3.html
@@ -1,5 +1,5 @@
 <figure class="effect-portfolio wow fadeIn" data-wow-duration="3s">
-  <img src="img/albums/album_3/P1040556.JPG" alt="De la nature"/>
+  <img src="img/albums/album_3/thumbnail.jpg" alt="De la nature"/>
   <figcaption>
     <h2>De la nature</h2>
     <a title="(2/28) Dans mon jardin" href="/img/albums/album_3/DSC01190.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01190.JPG"></a>
