--- a/_includes/gallery_4.html
+++ b/_includes/gallery_4.html
@@ -1,5 +1,5 @@
 <figure class="effect-portfolio wow fadeIn" data-wow-duration="4s">
-  <img src="/img/albums/album_4/DSC02196.JPG" alt="Des mots"/>
+  <img src="/img/albums/album_4/thumbnail.jpg" alt="Des mots"/>
   <figcaption>
     <h2>Des mots</h2>
     <a title="(2/14) Prison d'Alcatraz - USA" href="/img/albums/album_4/DSC00477.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC00477.JPG"></a>
