--- a/_includes/gallery_3.html
+++ b/_includes/gallery_3.html
@@ -13,7 +13,7 @@
     <a title="(10/28) Ile de Cies - Espagne" href="/img/albums/album_3/P1060103.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1060103.JPG"></a>
     <a title="(11/28) Ile de Tenerife - Espagne" href="/img/albums/album_3/P1080528.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P1080528.JPG"></a>
     <a title="(12/28) Genève - Suisse" href="/img/albums/album_3/P10808331.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808331.jpg"></a>
-    <a title="(13/28) Sur la route" href="/img/albums/album_3/P10808333.png" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808333.png"></a>
+    <a title="(13/28) Sur la route" href="/img/albums/album_3/P10808333.jpg" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/P10808333.jpg"></a>
     <a title="(14/28) San Francisco - USA" href="/img/albums/album_3/DSC00705.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC00705.JPG"></a>
     <a title="(15/28) Dans mon jardin" href="/img/albums/album_3/DSC01315.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/DSC01315.JPG"></a>
     <a title="(16/28)" href="/img/albums/album_3/IMG_0166.JPG" data-lightbox-gallery="gallery3" data-lightbox-hidpi="/img/albums/album_3/IMG_0166.JPG"></a>
