--- a/_includes/gallery_5.html
+++ b/_includes/gallery_5.html
@@ -2,28 +2,29 @@
   <img src="/img/albums/album_5/thumbnail.jpg" alt="Des pierres"/>
   <figcaption>
     <h2>Des pierres</h2>
-    <a title="(2/23) Galeries Lafayette - Paris" href="/img/albums/album_5/DSC01180.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC01180.jpg"></a>
-    <a title="(3/23) Village de Xidi - Chine" href="/img/albums/album_5/P1040580.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1040580.JPG"></a>
-    <a title="(4/23) Village de Xidi - Chine" href="/img/albums/album_5/P1040766.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1040766.JPG"></a>
-    <a title="(5/23) Village de Flavigny - France" href="/img/albums/album_5/P1050538.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1050538.JPG"></a>
-    <a title="(6/23)" href="/img/albums/album_5/P1060052.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1060052.JPG"></a>
-    <a title="(7/23) Berlin - Allemagne" href="/img/albums/album_5/P1070886.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1070886.jpg"></a>
-    <a title="(8/23) Ile de Cies - Espagne" href="/img/albums/album_5/P1090035.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1090035.JPG"></a>
-    <a title="(9/23) Abbaye de Fontfroide - France" href="/img/albums/album_5/P10904390.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904390.jpg"></a>
-    <a title="(10/23) Saqqarah - Egypte" href="/img/albums/album_5/P10904392.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904392.jpg"></a>
-    <a title="(11/23) Village de Pérouges - France" href="/img/albums/album_5/P10904394.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904394.jpg"></a>
-    <a title="(12/23) Village de Pérouges - France" href="/img/albums/album_5/Photo0144.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/Photo0144.jpg"></a>
-    <a title="(13/23) San Francisco - USA" href="/img/albums/album_5/DSC00873.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC00873.JPG"></a>
-    <a title="(14/23) Village de Pérouges - France" href="/img/albums/album_5/DSC01668.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC01668.JPG"></a>
-    <a title="(15/23) Montagnes Huangshan - Chine" href="/img/albums/album_5/P1040673.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1040673.JPG"></a>
-    <a title="(16/23) Carcassonne - France" href="/img/albums/album_5/P1050211.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1050211.JPG"></a>
-    <a title="(17/23) Orense - Espagne" href="/img/albums/album_5/P1050935.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1050935.JPG"></a>
-    <a title="(18/23) La Garde Adhémar - France" href="/img/albums/album_5/P1070420.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1070420.JPG"></a>
-    <a title="(19/23) Les Baux-de-Provence - France" href="/img/albums/album_5/P1080770.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1080770.JPG"></a>
-    <a title="(20/23) Temple de Tulum - Mexique" href="/img/albums/album_5/P1090439.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1090439.JPG"></a>
-    <a title="(21/23) Ile de Santorin - Grèce" href="/img/albums/album_5/P10904391.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904391.jpg"></a>
-    <a title="(22/23) Temple de Louxor - Egypte" href="/img/albums/album_5/P10904393.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904393.jpg"></a>
-    <a title="(23/23)" href="/img/albums/album_5/Photo0140.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/Photo0140.jpg"></a>
-    <a title="(1/23) Golden Gate Bridge - USA" href="/img/albums/album_5/DSC00401.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC00401.JPG"></a>
+    <a title="(2/24) Galeries Lafayette - Paris" href="/img/albums/album_5/DSC01180.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC01180.jpg"></a>
+    <a title="(3/24) Village de Xidi - Chine" href="/img/albums/album_5/P1040580.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1040580.JPG"></a>
+    <a title="(4/24) Village de Xidi - Chine" href="/img/albums/album_5/P1040766.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1040766.JPG"></a>
+    <a title="(5/24) Village de Flavigny - France" href="/img/albums/album_5/P1050538.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1050538.JPG"></a>
+    <a title="(6/24)" href="/img/albums/album_5/P1060052.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1060052.JPG"></a>
+    <a title="(7/24) Berlin - Allemagne" href="/img/albums/album_5/P1070886.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1070886.jpg"></a>
+    <a title="(8/24) Ile de Cies - Espagne" href="/img/albums/album_5/P1090035.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1090035.JPG"></a>
+    <a title="(9/24) Abbaye de Fontfroide - France" href="/img/albums/album_5/P10904390.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904390.jpg"></a>
+    <a title="(10/24) Saqqarah - Egypte" href="/img/albums/album_5/P10904392.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904392.jpg"></a>
+    <a title="(11/24) Village de Pérouges - France" href="/img/albums/album_5/P10904394.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904394.jpg"></a>
+    <a title="(12/24) Village de Pérouges - France" href="/img/albums/album_5/Photo0144.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/Photo0144.jpg"></a>
+    <a title="(13/24) San Francisco - USA" href="/img/albums/album_5/DSC00873.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC00873.JPG"></a>
+    <a title="(14/24) Village de Pérouges - France" href="/img/albums/album_5/DSC01668.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC01668.JPG"></a>
+    <a title="(15/24) Montagnes Huangshan - Chine" href="/img/albums/album_5/P1040673.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1040673.JPG"></a>
+    <a title="(16/24) Carcassonne - France" href="/img/albums/album_5/P1050211.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1050211.JPG"></a>
+    <a title="(17/24) Orense - Espagne" href="/img/albums/album_5/P1050935.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1050935.JPG"></a>
+    <a title="(18/24) La Garde Adhémar - France" href="/img/albums/album_5/P1070420.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1070420.JPG"></a>
+    <a title="(19/24) Les Baux-de-Provence - France" href="/img/albums/album_5/P1080770.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1080770.JPG"></a>
+    <a title="(20/24) Temple de Tulum - Mexique" href="/img/albums/album_5/P1090439.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1090439.JPG"></a>
+    <a title="(21/24) Ile de Santorin - Grèce" href="/img/albums/album_5/P10904391.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904391.jpg"></a>
+    <a title="(22/24) Temple de Louxor - Egypte" href="/img/albums/album_5/P10904393.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P10904393.jpg"></a>
+    <a title="(23/24)" href="/img/albums/album_5/Photo0140.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/Photo0140.jpg"></a>
+    <a title="(24/24) Hôtel Bellagio Las Vegas - USA" href="/img/albums/album_5/P1070143.jpg" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/P1070143.jpg"></a>
+    <a title="(1/24) Golden Gate Bridge - USA" href="/img/albums/album_5/DSC00401.JPG" data-lightbox-gallery="gallery5" data-lightbox-hidpi="/img/albums/album_5/DSC00401.JPG"></a>
   </figcaption>
 </figure>
