--- a/_includes/gallery_4.html
+++ b/_includes/gallery_4.html
@@ -2,19 +2,20 @@
   <img src="/img/albums/album_4/thumbnail.jpg" alt="Des mots"/>
   <figcaption>
     <h2>Des mots</h2>
-    <a title="(2/14) Prison d'Alcatraz - USA" href="/img/albums/album_4/DSC00477.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC00477.JPG"></a>
-    <a title="(3/14) Bourgogne - France" href="/img/albums/album_4/DSC02196.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC02196.JPG"></a>
-    <a title="(4/14) Canton de Vaud - Suisse" href="/img/albums/album_4/DSC04650.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04650.jpg"></a>
-    <a title="(5/14) Canton de Vaud - Suisse" href="/img/albums/album_4/DSC04651.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04651.jpg"></a>
-    <a title="(6/14) Pékin - Chine" href="/img/albums/album_4/P1050139.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050139.JPG"></a>
-    <a title="(7/14) La Charité-sur-Loire - France" href="/img/albums/album_4/P1050451.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050451.JPG"></a>
-    <a title="(8/14) Dijon - France" href="/img/albums/album_4/P1050649.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050649.JPG"></a>
-    <a title="(9/14) Dijon - France" href="/img/albums/album_4/P1050661.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050661.JPG"></a>
-    <a title="(10/14) Abbaye de Romainmôtier - Suisse" href="/img/albums/album_4/P1070505.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1070505.jpg"></a>
-    <a title="(11/14) Péninsule du Yucatan - Mexique" href="/img/albums/album_4/P1090460.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1090460.JPG"></a>
-    <a title="(12/14) Genève - Suisse" href="/img/albums/album_4/P1090461.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1090461.jpg"></a>
-    <a title="(13/14) Village de Nernier - France" href="/img/albums/album_4/DSC04543.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04543.jpg"></a>
-    <a title="(14/14) La Charité-sur-Loire - France" href="/img/albums/album_4/DSC04544.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04544.jpg"></a>
-    <a title="(1/14) San Francisco - USA" href="/img/albums/album_4/DSC00377.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC00377.JPG"></a>
+    <a title="(2/15) Prison d'Alcatraz - USA" href="/img/albums/album_4/DSC00477.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC00477.JPG"></a>
+    <a title="(3/15) Bourgogne - France" href="/img/albums/album_4/DSC02196.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC02196.JPG"></a>
+    <a title="(4/15) Canton de Vaud - Suisse" href="/img/albums/album_4/DSC04650.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04650.jpg"></a>
+    <a title="(5/15) Canton de Vaud - Suisse" href="/img/albums/album_4/DSC04651.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04651.jpg"></a>
+    <a title="(6/15) Pékin - Chine" href="/img/albums/album_4/P1050139.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050139.JPG"></a>
+    <a title="(7/15) La Charité-sur-Loire - France" href="/img/albums/album_4/P1050451.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050451.JPG"></a>
+    <a title="(8/15) Dijon - France" href="/img/albums/album_4/P1050649.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050649.JPG"></a>
+    <a title="(9/15) Dijon - France" href="/img/albums/album_4/P1050661.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1050661.JPG"></a>
+    <a title="(10/15) Abbaye de Romainmôtier - Suisse" href="/img/albums/album_4/P1070505.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1070505.jpg"></a>
+    <a title="(11/15) Péninsule du Yucatan - Mexique" href="/img/albums/album_4/P1090460.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1090460.JPG"></a>
+    <a title="(12/15) Genève - Suisse" href="/img/albums/album_4/P1090461.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/P1090461.jpg"></a>
+    <a title="(13/15) Village de Nernier - France" href="/img/albums/album_4/DSC04543.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04543.jpg"></a>
+    <a title="(14/15) La Charité-sur-Loire - France" href="/img/albums/album_4/DSC04544.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC04544.jpg"></a>
+    <a title="(15/15) Yvoire - France" href="/img/albums/album_4/DSC05071.jpg" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC05071.jpg"></a>
+    <a title="(1/15) San Francisco - USA" href="/img/albums/album_4/DSC00377.JPG" data-lightbox-gallery="gallery4" data-lightbox-hidpi="/img/albums/album_4/DSC00377.JPG"></a>
   </figcaption>
 </figure>
