--- a/_includes/gallery_6.html
+++ b/_includes/gallery_6.html
@@ -2,24 +2,27 @@
   <img src="/img/albums/album_6/thumbnail.jpg" alt="Des êtres"/>
   <figcaption>
     <h2>Des êtres</h2>
-    <a title="(2/19) USA" href="/img/albums/album_6/DSC00946.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00946.JPG"></a>
-    <a title="(3/19) France" href="/img/albums/album_6/DSC01567.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC01567.JPG"></a>
-    <a title="(4/19) Espagne" href="/img/albums/album_6/P1060111.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060111.JPG"></a>
-    <a title="(5/19) Maldives" href="/img/albums/album_6/P1060414.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060414.JPG"></a>
-    <a title="(6/19) USA" href="/img/albums/album_6/P1060954.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060954.JPG"></a>
-    <a title="(7/19) Mexique" href="/img/albums/album_6/P1090429.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090429.JPG"></a>
-    <a title="(8/19) Suisse" href="/img/albums/album_6/P10904292.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904292.jpg"></a>
-    <a title="(9/19) Suisse" href="/img/albums/album_6/P10904294.png" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904294.png"></a>
-    <a title="(10/19) USA" href="/img/albums/album_6/DSC00623.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00623.JPG"></a>
-    <a title="(11/19) France" href="/img/albums/album_6/DSC01216.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC01216.jpg"></a>
-    <a title="(12/19) Suisse" href="/img/albums/album_6/P1050171.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1050171.JPG"></a>
-    <a title="(13/19) Maldives" href="/img/albums/album_6/P1060375.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060375.jpg"></a>
-    <a title="(14/19) Maldives" href="/img/albums/album_6/P1060678.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060678.jpg"></a>
-    <a title="(15/19) Mexique" href="/img/albums/album_6/P1090298.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090298.JPG"></a>
-    <a title="(16/19) France" href="/img/albums/album_6/P10904291.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904291.jpg"></a>
-    <a title="(17/19) France" href="/img/albums/album_6/P10904293.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904293.jpg"></a>
-    <a title="(18/19) USA" href="/img/albums/album_6/DSC00351.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00351.jpg"></a>
-    <a title="(19/19) USA" href="/img/albums/album_6/DSC00513.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00513.jpg"></a>
-    <a title="(1/19) USA" href="/img/albums/album_6/DSC00420.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00420.JPG"></a>
+    <a title="(2/22) USA" href="/img/albums/album_6/DSC00946.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00946.JPG"></a>
+    <a title="(3/22) France" href="/img/albums/album_6/DSC01567.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC01567.JPG"></a>
+    <a title="(4/22) Espagne" href="/img/albums/album_6/P1060111.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060111.JPG"></a>
+    <a title="(5/22) Maldives" href="/img/albums/album_6/P1060414.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060414.JPG"></a>
+    <a title="(6/22) USA" href="/img/albums/album_6/P1060954.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060954.JPG"></a>
+    <a title="(7/22) Mexique" href="/img/albums/album_6/P1090429.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090429.JPG"></a>
+    <a title="(8/22) Suisse" href="/img/albums/album_6/P10904292.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904292.jpg"></a>
+    <a title="(9/22) Suisse" href="/img/albums/album_6/P10904294.png" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904294.png"></a>
+    <a title="(10/22) USA" href="/img/albums/album_6/DSC00623.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00623.JPG"></a>
+    <a title="(11/22) France" href="/img/albums/album_6/DSC01216.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC01216.jpg"></a>
+    <a title="(12/22) Suisse" href="/img/albums/album_6/P1050171.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1050171.JPG"></a>
+    <a title="(13/22) Maldives" href="/img/albums/album_6/P1060375.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060375.jpg"></a>
+    <a title="(14/22) Maldives" href="/img/albums/album_6/P1060678.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1060678.jpg"></a>
+    <a title="(15/22) Mexique" href="/img/albums/album_6/P1090298.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090298.JPG"></a>
+    <a title="(16/22) France" href="/img/albums/album_6/P10904291.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904291.jpg"></a>
+    <a title="(17/22) France" href="/img/albums/album_6/P10904293.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P10904293.jpg"></a>
+    <a title="(18/22) USA" href="/img/albums/album_6/DSC00351.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00351.jpg"></a>
+    <a title="(19/22) USA" href="/img/albums/album_6/DSC00513.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00513.jpg"></a>
+    <a title="(20/22) Espagne" href="/img/albums/album_6/P1090647.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090647.jpg"></a>
+    <a title="(21/22) Espagne" href="/img/albums/album_6/P1090658.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090658.jpg"></a>
+    <a title="(22/22) Espagne" href="/img/albums/album_6/P1090661.jpg" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/P1090661.jpg"></a>
+    <a title="(1/22) USA" href="/img/albums/album_6/DSC00420.JPG" data-lightbox-gallery="gallery6" data-lightbox-hidpi="/img/albums/album_6/DSC00420.JPG"></a>
   </figcaption>
 </figure>
