--- a/_includes/gallery_2.html
+++ b/_includes/gallery_2.html
@@ -16,6 +16,7 @@
     <a title="(13/15) Shanghai - Chine" href="/img/albums/album_2/P1040892.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040892.jpg"></a>
     <a title="(14/15) Pékin - Chine" href="/img/albums/album_2/P1040898.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1040898.jpg"></a>
     <a title="(15/15) Le Caire - Egypte" href="/img/albums/album_2/P1050548.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1050548.jpg"></a>
+    <a title="(15/15) Dashour - Egypte" href="/img/albums/album_2/P1050570.jpg" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/P1050570.jpg"></a>
     <a title="(1/15) San Francisco - USA" href="/img/albums/album_2/DSC00286-Version2.JPG" data-lightbox-gallery="gallery2" data-lightbox-hidpi="/img/albums/album_2/DSC00286-Version2.JPG"></a>
   </figcaption> <!-- End caption -->
 </figure> <!-- End portfolio 2 -->
